[project]
name = "gpt5-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic==2.11.7",
    "fastapi==0.116.1",
    "azure-cosmos==4.9.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0"
]
